# libmimes

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  library.cpp  library.hpp
src/desktop/: desktop_entry.hpp  desktop_finder.cpp  desktop_finder.hpp  desktop_parser.cpp  desktop_parser.hpp
src/exceptions/: base_exception.cpp  base_exception.hpp  cannot_found_exception.cpp  cannot_found_exception.hpp  execute_command_failed_exception.cpp  execute_command_failed_exception.hpp  file_not_found_exception.cpp  file_not_found_exception.hpp  file_stat_read_exception.cpp  file_stat_read_exception.hpp  get_command_result_exception.cpp  get_command_result_exception.hpp  not_found_exception.cpp  not_found_exception.hpp
src/helpers/: command.cpp  command.hpp  command_parameter.hpp  directory.cpp  directory.hpp  environment.cpp  environment.hpp  file.cpp  file.hpp  file_mime_utility.cpp  file_mime_utility.hpp  gio_mime_utility.cpp  gio_mime_utility.hpp  mime_utility.cpp  mime_utility.hpp  path.cpp  path.hpp  path.ipp  string.cpp  string.hpp
src/mime/: applications_list.hpp  base_parser.cpp  base_parser.hpp  mime_applications.hpp  mime_applications_file_section.hpp  mime_applications_parser.cpp  mime_applications_parser.hpp  mime_cache.hpp  mime_cache_builder.cpp  mime_cache_builder.hpp  mime_cache_parser.cpp  mime_cache_parser.hpp  mime_cache_reader.cpp  mime_cache_reader.hpp  mime_database_file_parser.cpp  mime_database_file_parser.hpp  mime_database_reader.cpp  mime_database_reader.hpp  parser.cpp  parser.hpp  section.hpp
test/: CMakeLists.txt  library.cpp
test-app/: CMakeLists.txt  main.cpp
test/desktop/: desktop_parser__parse_file.cpp
test/helpers/: command__execute.cpp  command__get_command_text.cpp  directory__get_file_names.cpp  directory__is_exitst.cpp  file__extract_mime_type.cpp  file__get_mime_type.cpp  file__is_exists.cpp  path__extract_file_extension.cpp  path__extract_file_name.cpp  path__join.cpp  string__ends_with.cpp  string__ltrim.cpp  string__split.cpp  string__starts_with.cpp
test/mime/: mime_applications_parser.cpp  mime_cache_builder__apply_overrides.cpp  mime_cache_builder__from_mime_applications.cpp  mime_cache_parser__parse_file.cpp  mime_cache_parser__parse_string.cpp  mime_database_file_parser__parse_file.cpp  parser__parse_file.cpp  parser__parse_string.cpp
test/test_case_data/desktop/: multiple_mime_types.desktop  one_mime_type.desktop  wo_mime_types.desktop
test/test_case_data/helpers/: file.docx
test/test_case_data/mime/parser/: mime.xml  mimeinfo.cache  only_added.list  only_defaults.list  only_removed.list
